<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/phoneInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColorHint="@color/teal_700"
        app:hintTextColor="@color/teal_700"
        app:boxBackgroundColor="@color/light_gray"
        app:boxStrokeColor="@color/teal_700"
        android:layout_margin="5dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/phoneInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:textColor="@color/gray"
            android:hint="@string/input_phone_number"
            android:textAlignment="center"
            android:inputType="phone"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/messageInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/phoneInputLayout"
        android:textColorHint="@color/teal_700"
        app:hintTextColor="@color/teal_700"
        app:boxBackgroundColor="@color/light_gray"
        app:boxStrokeColor="@color/teal_700"
        android:layout_margin="5dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/messageInput"
            android:layout_width="match_parent"
            android:textColor="@color/gray"
            android:layout_height="wrap_content"
            android:hint="@string/input_text_message"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/sendSms"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/input_send"
        android:backgroundTint="@color/teal_700"
        android:textColor="@color/light_gray"
        android:layout_below="@id/messageInputLayout"
        android:layout_centerHorizontal="true"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal"
        android:layout_below="@id/sendSms">
        <Button
            android:id="@+id/fillPhoneNumberToSms"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/input_fill_phone_number"
            android:backgroundTint="@color/teal_700"
            android:textColor="@color/light_gray"
            android:layout_centerHorizontal="true"/>
        <Button
            android:id="@+id/fillContentToSms"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/input_fill_content"
            android:backgroundTint="@color/teal_700"
            android:textColor="@color/light_gray"
            android:layout_centerHorizontal="true"/>
    </LinearLayout>
</RelativeLayout>